--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta name="google-signin-client_id" content="65428256034-1ib6n9qcq3hkhgb9lh5ot3a3h1gdnat0.apps.googleusercontent.com">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheets/style.css">
     <title>Battle Kingdom</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
     <div class="root">
             <h2 class="rooth2">LOGIN</h2>
+            <div id="g_id_onload"
+            data-client_id="65428256034-1ib6n9qcq3hkhgb9lh5ot3a3h1gdnat0.apps.googleusercontent.com"
+            data-context="signin"
+            data-ux_mode="popup"
+            data-login_uri="kbc.herokuapp.com"
+            data-nonce=""
+            data-auto_prompt="false">
+            </div>
 
-            <div id="google-login" data-onsuccess="onSignIn"></div>
-
+            <div class="g_id_signin"
+                data-type="standard"
+                data-shape="pill"
+                data-theme="filled_blue"
+                data-text="signin_with."
+                data-size="large"
+                data-locale="pt-BR"
+                data-logo_alignment="left">
+            </div>
     </div>
     <script src="./javascripts/script.js"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
 </html>
