--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             data-client_id="65428256034-1ib6n9qcq3hkhgb9lh5ot3a3h1gdnat0.apps.googleusercontent.com"
             data-context="signin"
             data-ux_mode="popup"
-            data-login_uri="kbc.herokuapp.com"
+            data-login_uri="index.html"
             data-nonce=""
             data-auto_prompt="false">
             </div>
